# kcm-pacman-repoeditor

./: CMakeLists.txt  NEWS  README.md  config.h.cmake  kcmpacmanrepoeditor.kdev4  kcmpacmanrepositoryeditor.kdev4
other/: CMakeLists.txt  kcm_pacmanrepoeditor.desktop
po/: CMakeLists.txt  Messages.sh  it.po  kcmpacmanrepoeditor.pot
resources/: CMakeLists.txt
src/: CMakeLists.txt  addrepo.cpp  addrepo.h  checkboxdelegate.cpp  checkboxdelegate.h  kcmpacmanrepoeditor.cpp  kcmpacmanrepoeditor.h  optionsdelegate.cpp  optionsdelegate.h  repoconf.cpp  repoconf.h  repoentry.cpp  repoentry.h
src/helper/: CMakeLists.txt  helper.cpp  helper.h  kcmpacmanrepoeditor.actions
ui/: addrepo.ui  kcmpacmanrepoeditor.ui
