install(FILES database-chakra-16.png  DESTINATION share/icons/hicolor/16x16/places/    RENAME database-chakra.png)
install(FILES database-chakra-22.png  DESTINATION share/icons/hicolor/22x22/places/    RENAME database-chakra.png)
install(FILES database-chakra-32.png  DESTINATION share/icons/hicolor/32x32/places/    RENAME database-chakra.png)
install(FILES database-chakra-48.png  DESTINATION share/icons/hicolor/48x48/places/    RENAME database-chakra.png)
install(FILES database-chakra-64.png  DESTINATION share/icons/hicolor/64x64/places/    RENAME database-chakra.png)
install(FILES database-chakra-72.png  DESTINATION share/icons/hicolor/72x72/places/    RENAME database-chakra.png)
install(FILES database-chakra-96.png  DESTINATION share/icons/hicolor/96x96/places/    RENAME database-chakra.png)
install(FILES database-chakra-128.png DESTINATION share/icons/hicolor/128x128/places/  RENAME database-chakra.png)
install(FILES database-chakra-256.png DESTINATION share/icons/hicolor/256x256/places/  RENAME database-chakra.png)
install(FILES database-chakra-512.png DESTINATION share/icons/hicolor/512x512/places/  RENAME database-chakra.png)
install(FILES database-chakra.svg     DESTINATION share/icons/hicolor/scalable/places/ RENAME database-chakra.svg)